--- a/preswald.toml
+++ b/preswald.toml
@@ -1,14 +1,14 @@
 [project]
 title = "Dashboard Project"
 version = "0.1.0"
-port = 3000
-slug = "paul-anderson-dashboard"  # Required: Unique identifier for your project
+port = 8501
+slug = "paulandersondashboard377133244"  # Required: Unique identifier for your project
 entrypoint = "hello.py"    # Required: Main script to run when executing preswald run
 
 [branding]
 name = "Housing Market Dashboard"
-logo = "data/home.png"
-favicon = "data/home.ico"
+logo = "images/logo.png"
+favicon = "images/favicon.ico"
 primaryColor = "#ffcc00"
 
 [data.housing_data]
