--- a/preswald.toml
+++ b/preswald.toml
@@ -2,13 +2,13 @@
 title = "Dashboard Project"
 version = "0.1.0"
 port = 8501
-slug = "paulandersondashboard377133244"  # Required: Unique identifier for your project
+slug = "paul-anderson-dashboard"  # Required: Unique identifier for your project
 entrypoint = "hello.py"    # Required: Main script to run when executing preswald run
 
 [branding]
 name = "Housing Market Dashboard"
-logo = "images/logo.png"
-favicon = "images/favicon.ico"
+logo = "images/home.png"
+favicon = "images/home.ico"
 primaryColor = "#ffcc00"
 
 [data.housing_data]
